  - Disable citizens compatability if citizens gets disabled, courtesy of Warriorrrr with PR #5289.
  - API: Added TownBlockStatusScreenEvent.
    - Adds ability to add lines and components to the TownBlock status screen (seen via /plot perm|info.)
  - Remove TownRuinSettings class, moving methods to TownySettings.
  - Move TownRuinUtil to utils package.
  - Update yaml parser url and fix using a translatable (which could happen before we load language.)
  - Fix plugin disabling if something is translated before fully loading translations, courtesy of Warriorrrr with PR #5291.
  - Modernise /townyworld, courtesy of Warriorrrr with PR #5292.
  - Blank king prefixes/postfixes wont override mayor prefixes in the towny_prefix/postfix placeholders.
  - Use deprecated mysql driver if required, courtesy of Warriorrrr with PR #5294.
    - Closes #5245.
  - Bump language files to 0.123.
0.97.1.11:
  - Restore TownRuinSettings/TownRuinUtil skeletons to make SiegeWar and Dynmap-Towny happy.
  - Fix NoSuchMethodError thrown by add-on plugins using TownyPermissionSource methods using 0.97.1.10.
  - Temporary fix for grass remaining snowy, courtesy of Warriorrrr with PR #5298.
0.97.1.12:
  - Remove the ancient and often-mistaken /ta output.
  - Remove the MemMgmt util.
  - Make github actions not build commits from the crowdin branch, courtesy of Warriorrrr with PR #5304.
  - Add a /ta install command, courtesy of Warriorrrr with PR #5303.
  - New Config Option: economy.daily_taxes.town_plotbased_upkeep_maximum_amount
    - Default: 0.0
    - If set to any amount over zero, if a town's plot-based upkeep totals more than this value, the town will pay the maximum instead.
  - Fix %townyadvanced_player_status% placeholder not using the placeholder colouring settings.
  - Bump language files to 0.124.
0.97.2.0:
  - Bump version for release.
0.97.2.1:
  - Tidy up PlayerCacheUtil.
  - Fix missing splitter between Nation bank and upkeep on the nation status screen.